--- a/TaskMaster.API/appsettings.json
+++ b/TaskMaster.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=BURITICRACK;Database=TaskMaster;Encrypt=False;User Id=dba;Password=abc123*;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
