--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,6 @@
 version: 2
 updates:
   - package-ecosystem: "nuget" # See documentation for possible values
-    directory: ""C:\Itm_repos\TaskMaster"" # Location of package manifests
+    directory: "C:\Itm_repos\TaskMaster" # Location of package manifests
     schedule:
       interval: "weekly"
